# padtype

./: .gitignore  Cargo.toml  README.md  run
app/: Cargo.toml
app/src/: main.rs
evdev-conf/: Cargo.toml
evdev-conf/src/: example.toml  main.rs  map.rs  octant.rs
linput-stuffer/: Cargo.toml
linput-stuffer/src/: lib.rs  sym_defs.rs  unicode_to_keysym.rs
linput_stuffer/: Cargo.toml
linput_stuffer/src/: lib.rs
src/: main.rs  octant.rs
