[package]
edition = "2021"
name = "padtype"
version = "0.1.0"

[dependencies]
eframe = { version = "0.17", features = [ "persistence" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
smallstr = { version = "0.3", features = [ "serde" ] }
gilrs = "0.8.2"

[dependencies.winput-stuffer]
path = "../winput-stuffer"
