[package]
name = "padtype"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayref = "0.3.7"
evdev = "0.12"
hidapi.version = "2.3.3"
hidapi.default-features = false
hidapi.features = ["linux-native"]
packed_bools = "0.1.0"
